apps/k8s/overlays/prod/infra.auto.gateway.patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  annotations:
    networking.gke.io/certmap: "app-certs-map"
spec:
  addresses:
    - type: NamedAddress
      value: "gke-sre-gitops-ip"
