apps/k8s/overlays/prod/infra.auto.route.patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  hostnames:
    - "sre.lmhaw.dev"
